<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Welcome_Activity"
    android:background="@drawable/bb">

    <include layout="@layout/actionbar_app"
        android:id="@+id/actionbarlogin"/>

    <TextView
        android:id="@+id/Register_create_new_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"
        android:layout_below="@+id/actionbarlogin"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        />

    <EditText
        android:id="@+id/register_Edittext_Ph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Register_create_new_text"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/Tel_Et"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/register_Edittext_Pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_Edittext_Ph"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/Password_Et"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/Login_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Login_button"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@+id/register_Edittext_Pw"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn_create"
        android:textColor="@android:color/white"/>
</RelativeLayout>