<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity"
    android:background="@drawable/back">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"
        android:layout_marginTop="120dp"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="100sp" />
    <Button
        android:id="@+id/i_have_account_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/i_have_account"
        android:background="@drawable/btn_main"
        android:textColor="@color/btn_font"
        android:layout_above="@+id/create_new_account_button"
        android:layout_marginBottom="30dp"
        />
    <Button
        android:id="@+id/create_new_account_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account"
        android:background="@drawable/btn_main"
        android:textColor="@color/btn_font"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="160dp"
        />
</RelativeLayout>